# kikusui-sps-automation-adapter

./: .gitignore  Cargo.toml  README.md  fluentbit.yaml
logs/: 2025-08-30T09:34:41Z.jsonl  2025-08-30T09:51:28Z.jsonl
src/: lib.rs  main.rs  power_supply.rs
